@@ -1,3 +1,5 @@
+MAINTAINERCLEANFILES = Makefile.in
+
 include $(top_srcdir)/gnome-doc-utils.make
 dist-hook: doc-dist-hook
 
